--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,7 @@ body {
     border-radius: 16px;
     background-color: #1E8A49;
     color: #fff;
+    font-size: 20px;
     font-weight: 600;
     text-align: center;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
