Added fade animation when closing welcome modal

--- a/css/night-sky.css
+++ b/css/night-sky.css
@@ -61,3 +61,12 @@ body {
     text-align: center;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
+/* fade out animation when modal is closed */
+.fade-out {
+    animation: fadeOut .5s linear;
+}
+@keyframes fadeOut {
+    0% { opacity: 1;}
+    50% { opacity: .5;}
+    100% {opacity: 0;}
+}
