--- a/css/night-sky.css
+++ b/css/night-sky.css
@@ -10,22 +10,26 @@ body {
     align-items: center;
     font-family: 'Hind', sans-serif;
     height: 100vh;
+    max-width: 480px;
     margin: 0;
-    background-color: #3e3e3e;
+    background: url(../assets/night-sky.jpg) no-repeat center center fixed;
+    background-size: cover;
+    box-shadow:inset 0 0 0 2000px rgba(70, 53, 53, 1.0);
+    color: #fff;
 }
 
 .modal {
     display: block;
     position: fixed;
-    z-index: 1;
+    z-index: 99;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgba(255, 255, 255, 0.9);
+    background-color: rgba(255, 255, 255, 0.97);
+    color: #000;
 }
-
 .modal-content {
     display: flex;
     flex-direction: column;
@@ -69,4 +73,76 @@ body {
     0% { opacity: 1;}
     50% { opacity: .5;}
     100% {opacity: 0;}
+}
+
+.graphics-container {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin: 2rem 2rem 0 2rem;
+}
+
+.back-to-map-container {
+    display: flex;
+    justify-content: start;
+    align-items: flex-start;
+    margin: 0 0 0 2rem;
+    z-index: 1;
+}
+.back-to-map-container a {
+    display: flex;
+    text-decoration: none;
+    color: #fff;
+    font-size: 24px;
+    font-weight: 600;
+}
+.back-to-map-container img {
+    width: 25px;
+    margin-right: 1rem;
+}
+
+.light-tabs-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-end;
+    margin: 0 0 0 0;
+    z-index: 1;
+}
+.light-tabs-container img {
+    margin: 0 13px .5rem 0;
+}
+#light-tab1 {
+    height: 76px;
+    width: 102px;
+}
+#light-tab2 {
+    height: 76px;
+    width: 89px;
+}
+#light-tab3 {
+    height: 76px;
+    width: 75px;
+}
+#light-tab4 {
+    height: 76px;
+    width: 62px;
+}
+#light-tab1-outline, #light-tab2-outline, #light-tab3-outline, #light-tab4-outline {
+    height: 76px;
+    margin-right: -6px;
+}
+
+.mountains {
+    width: 100%;
+    margin-top: 6rem;
+}
+
+.info-container {
+    background-color: #000;
+    padding: 1rem 1rem 7rem 1rem;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 600;
+    /* box-shadow: 0px -3px 5px #000; */
 }
