--- a/css/night-sky.css
+++ b/css/night-sky.css
@@ -16,6 +16,11 @@ body {
     background-size: cover;
     box-shadow:inset 0 0 0 2000px rgba(70, 53, 53, 1.0);
     color: #fff;
+    transition: box-shadow 0.5s linear;
+}
+/* body - night sky phase 2 stuff */
+.night-sky2 {
+    box-shadow:inset 0 0 0 2000px rgba(70, 53, 53, 0.93);
 }
 
 .modal {
