--- a/css/night-sky.css
+++ b/css/night-sky.css
@@ -16,11 +16,27 @@ body {
     background-size: cover;
     box-shadow:inset 0 0 0 2000px rgba(70, 53, 53, 1.0);
     color: #fff;
-    transition: box-shadow 0.5s linear;
+    transition: box-shadow 0.3s linear;
+}
+/* body - night sky phase 1 stuff */
+.night-sky1 {
+    box-shadow:inset 0 0 0 2000px rgba(70, 53, 53, 1.0);
 }
 /* body - night sky phase 2 stuff */
 .night-sky2 {
     box-shadow:inset 0 0 0 2000px rgba(70, 53, 53, 0.93);
+}
+/* body - night sky phase 3 stuff */
+.night-sky3 {
+    box-shadow:inset 0 0 0 2000px rgba(70, 53, 53, 0.88);
+}
+/* body - night sky phase 4 stuff */
+.night-sky4 {
+    box-shadow:inset 0 0 0 2000px rgba(70, 53, 53, 0.75);
+}
+/* body - night sky phase 5 stuff */
+.night-sky5 {
+    box-shadow:inset 0 0 0 2000px rgba(70, 53, 53, 0.25);
 }
 
 .modal {
@@ -72,7 +88,7 @@ body {
 }
 /* fade out animation when modal is closed */
 .fade-out {
-    animation: fadeOut .5s linear;
+    animation: fadeOut .3s linear;
 }
 @keyframes fadeOut {
     0% { opacity: 1;}
@@ -116,6 +132,7 @@ body {
 }
 .light-tabs-container img {
     margin: 0 13px .5rem 0;
+    transition: margin 0.3s linear;
 }
 #light-tab1 {
     height: 76px;
@@ -133,9 +150,10 @@ body {
     height: 76px;
     width: 62px;
 }
-#light-tab1-outline, #light-tab2-outline, #light-tab3-outline, #light-tab4-outline {
+.light-tab-outline {
     height: 76px;
-    margin-right: -6px;
+    margin-right: -6px !important;
+    transition: margin 0.3s linear;
 }
 
 .mountains {
