--- a/css/night-sky.css
+++ b/css/night-sky.css
@@ -162,12 +162,12 @@ body {
 }
 
 .info-container {
-    background-color: #000;
+    background-color: #141414;
     padding: 1rem 1rem 7rem 1rem;
     text-align: center;
     font-size: 20px;
     font-weight: 600;
-    /* box-shadow: 0px -3px 5px #000; */
+    box-shadow: 0px -3px 5px #141414;
 }
 .info-container p {
     margin: 10px 0;
