--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ body {
     flex-direction: column;
     align-items: center;
     width: 100%;
+    height: inherit;
     background-color: #3a3a3a;
     color: #fff;
 }
